# scalable

./: .coverage  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yaml  gke-deploy-dev.yaml
app/: config.py  main.py
app/api/: error_handlers.py
app/core/: error_codes.py  exceptions.py  gen_and_embed.py
app/routers/: health.py  ml.py  schemas.py
k8s/base/: deployment.yaml  hpa.yaml  service.yaml
k8s/local/: kind-config.yaml  metrics-server-patch.yaml
test-results/: junit.xml
tests/: conftest.py  test_gen_and_embed.py
tests/integration/: test_health_routes.py  test_ml_routes.py
tests/unit/core/: test_gen_and_embed.py
